[package]
name = "blink-alloc"
version = "0.3.1"
edition = "2024"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/blink-alloc"
homepage = "https://github.com/zakarumych/blink-alloc"
repository = "https://github.com/zakarumych/blink-alloc"
readme = "README.md"
description = "Fast, concurrent, arena-based allocator with drop support"
keywords = ["allocator", "arena", "concurrent", "drop", "no-std"]
categories = ["memory-management", "no-std"]

[features]
nightly = ["bumpalo/allocator_api"]
alloc = ["allocator-api2/alloc"]
std = ["alloc", "allocator-api2/std"]
sync = ["parking_lot", "std"]

default = ["std"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
allocator-api2 = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.6"
bumpalo = "3.17"

[[bench]]
name = "bench"
harness = false
required-features = ["alloc", "sync", "nightly"]

[[example]]
name = "global"
required-features = ["std", "sync"]

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(no_global_oom_handling)'] }
